# pyrobloxbot

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: lint_type_check.yaml  release.yaml  smoke_test.yaml  tests.yaml
docs/source/: api_reference.md  conf.py  faq.md  index.md
docs/source/api_references/: api_references.md  pyrobloxbot.constants.md  pyrobloxbot.decorators.md  pyrobloxbot.exceptions.md  pyrobloxbot.keybinds.md  pyrobloxbot.md  pyrobloxbot.options.md  pyrobloxbot.state.md
docs/source/guides/: instalation.md  installation.md  joining_games.md  keybinds.md  options.md  starting.md  ui_nav.md
docs/source/guides/advanced/: inventory.md  joining_servers.md  multi-account.md
docs/source/guides/basic/: starting.md
docs/source/guides/examples/: anti-afk.md  factory-raid.md  macros.md  playtime-rewards-bot.md
docs/source/guides/usage/: image_recognition.md  joining_games.md  keybinds.md  options.md  ui_nav.md
src/pyrobloxbot/: __init__.py  constants.py  core.py  exceptions.py  literals.py  utils.py
src/pyrobloxbot/bot/: bot.py  keybinds.py  options.py  state.py
src/pyrobloxbot/constants/: __init__.py  keyboard_keys.py  ui_actions.py  ui_navigate_directions.py  walk_directions.py
src/pyrobloxbot/core/: __init__.py  character.py  ctxmanagers.py  decorators.py  image.py  input.py  movement.py  roblox.py  ui.py  window.py
tests/: conftest.py  test_core.py  test_exports.py  test_jump.py  test_key.py  test_player.py  test_smoke.py  test_ui_nav.py  test_utils.py  test_walk.py
tests/test_bot/: test_bot.py  test_keybinds.py  test_options.py  test_state.py
tests/test_core/: test_character.py  test_ctxmanagers.py  test_decorators.py  test_image.py  test_input.py  test_movement.py  test_roblox.py  test_ui.py  test_window.py
