[project]
name = "pyrobloxbot"
version = "1.0.9"
description = "A python library to control the roblox character and interact with game ui through keyboard inputs"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Mews", email = "tiraraspas@gmail.com" }]
keywords = ["bot", "keyboard", "roblox"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
]
dependencies = [
  "keyboard",
  "opencv-python",
  "pillow",
  "pyautogui",
  "pydirectinput",
  "pygetwindow",
  "pynput",
  "pyperclip",
  "pywin32",
]

[project.urls]
Homepage = "https://github.com/Mews/py-roblox-bot"
Issues = "https://github.com/Mews/py-roblox-bot/issues"

[dependency-groups]
docs = ["sphinx", "sphinx-rtd-theme"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
