[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyrobloxbot"
version = "1.0.9"
authors = [
  { name="Mews", email="ar754456@gmail.com" },
]
description = "A python library to control the roblox character and interact with game ui through keyboard inputs"

keywords = ["roblox", "bot", "keyboard"]

readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
]

requires-python = ">=3.10"

dependencies = [
  "pydirectinput",
  "pygetwindow",
  "pyperclip",
  "pywin32",
  "keyboard",
  "pynput",
  "pyautogui",
  "opencv-python",
  "pillow",
]


[project.urls]
Homepage = "https://github.com/Mews/pyrobloxbot"
Issues = "https://github.com/Mews/pyrobloxbot/issues"


[dependency-groups]
docs = [
  "sphinx",
  "sphinx_rtd_theme",
]

test = [
  "pytest",
  "pytest-cov",
]

dev = [
  "pre-commit",
  "ruff",
  "mypy",
  {include-group = "test"},
]


[tool.pytest.ini_options]
addopts = "--cov=pyrobloxbot --cov=tests"
testpaths = ["tests"]
