[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyrobloxbot"
version = "2.0.0"
authors = [
  { name="Mews", email="ar754456@gmail.com" },
]
description = "A python library to control the Roblox character and interact with game ui through keyboard inputs"

keywords = ["roblox", "bot", "keyboard"]

readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
]

requires-python = ">=3.10"

dependencies = [
  "pydirectinput==1.0.4",
  "pygetwindow==0.0.9",
  "pyperclip==1.11.0",
  "pywin32==311",
  "pynput==1.8.1",
  "opencv-python==4.13.0.90",
  "pillow==12.1.1",
  "pyscreeze==1.0.1",
  "requests==2.32.5",
]


[project.urls]
Homepage = "https://github.com/Mews/pyrobloxbot"
Issues = "https://github.com/Mews/pyrobloxbot/issues"


[dependency-groups]
docs = [
  "sphinx==9.1.0",
  "sphinx_rtd_theme==3.1.0",
  "myst-parser==5.0.0",
  "sphinxcontrib-video==0.4.2",
  "linkify-it-py==2.0.3",
]

test = [
  "pytest==9.0.2",
  "pytest-cov==7.0.0",
]

dev = [
  "pre-commit==4.5.1",
  "ruff==0.15.0",
  "mypy==1.19.1",
  {include-group = "test"},
]


[tool.pytest.ini_options]
addopts = "--cov=pyrobloxbot --cov=tests"
testpaths = ["tests"]

[tool.mypy]
files = ["src"]
ignore_missing_imports = true
disallow_incomplete_defs = true
disable_error_code = ["import-untyped"]

[tool.ruff]
target-version = "py310"
fix = true
